--- a/0_Перше_знайомство.ipynb
+++ b/0_Перше_знайомство.ipynb
@@ -67,7 +67,21 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n"
+        "Python 3.10.5 (main, Jul 22 2022, 17:09:35) [GCC 9.4.0]\n",
+        "Type 'copyright', 'credits' or 'license' for more information\n",
+        "IPython 8.3.0 -- An enhanced Interactive Python. Type '?' for help.\n",
+        "In [1]: print(\"Hello, world!\")\n",
+        "Hello, world!\n",
+        "In [2]: help(print)\n",
+        "In [3]: PI = 3.14\n",
+        "In [4]: \n",
+        "In [4]: PI\n",
+        "Out[4]: 3.14\n",
+        "In [5]: print(\"PI =\",PI)\n",
+        "PI = 3.14\n",
+        "In [6]: PI = 3.14\n",
+        "   ...: print(\"PI =\",PI)\n",
+        "PI = 3.14\n"
       ]
     },
     {
