--- a/0_Перше_знайомство.ipynb
+++ b/0_Перше_знайомство.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -42,6 +42,14 @@
         "outputId": "685e69d7-7448-4a4b-f4d7-e7fa817f7654"
       },
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\olena\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\display.py:431: UserWarning: Consider using IPython.display.IFrame instead\n",
+            "  warnings.warn(\"Consider using IPython.display.IFrame instead\")\n"
+          ]
+        },
         {
           "data": {
             "text/html": [
@@ -61,27 +69,6 @@
         "url = 'https://www.pythonanywhere.com/embedded3/'\n",
         "iframe = '<iframe src=' + url + ' width=95% height=480></iframe>'\n",
         "IPython.display.HTML(iframe)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Python 3.10.5 (main, Jul 22 2022, 17:09:35) [GCC 9.4.0]\n",
-        "Type 'copyright', 'credits' or 'license' for more information\n",
-        "IPython 8.3.0 -- An enhanced Interactive Python. Type '?' for help.\n",
-        "In [1]: print(\"Hello, world!\")\n",
-        "Hello, world!\n",
-        "In [2]: help(print)\n",
-        "In [3]: PI = 3.14\n",
-        "In [4]: \n",
-        "In [4]: PI\n",
-        "Out[4]: 3.14\n",
-        "In [5]: print(\"PI =\",PI)\n",
-        "PI = 3.14\n",
-        "In [6]: PI = 3.14\n",
-        "   ...: print(\"PI =\",PI)\n",
-        "PI = 3.14\n"
       ]
     },
     {
@@ -186,7 +173,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.2"
     }
   },
   "nbformat": 4,
