--- a/2_Ще_трохи_математики.ipynb
+++ b/2_Ще_трохи_математики.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "2. Ще трохи математики",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -41,6 +24,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,22 +32,21 @@
         "id": "csfYPusD0mWX",
         "outputId": "2fd0d9e4-9440-49e1-ea07-47c68f7b5a09"
       },
-      "source": [
-        "from math import sqrt,pi\n",
-        "S = float(input('Введіть площу кола: '))\n",
-        "r = sqrt(S/pi)\n",
-        "print ('Радіус дорівнює %6.3f см' %r)"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Введіть площу кола: 25\n",
             "Радіус дорівнює  2.821 см\n"
           ]
         }
+      ],
+      "source": [
+        "from math import sqrt,pi\n",
+        "S = float(input('Введіть площу кола: '))\n",
+        "r = sqrt(S/pi)\n",
+        "print ('Радіус дорівнює %6.3f см' %r)"
       ]
     },
     {
@@ -84,14 +67,30 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "sTFMO4Xp3fgO"
       },
-      "source": [
-        ""
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Площа сфери S = 1809.56\n",
+            "Об'єм кулi V = 523.6\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "from math import pi\n",
+        "r = float(input('Введіть радіус сфери: '))\n",
+        "S = round(4*pi*r**2,2)\n",
+        "print(\"Площа сфери S =\", S)\n",
+        "\n",
+        "r = float(input('\\nВведіть радіус кулі: '))\n",
+        "V = round(4/3*pi*r**3,1)\n",
+        "print(\"Об'єм кулi V =\", V)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -111,14 +110,33 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "id": "8yhfAwYm5E_z"
       },
-      "source": [
-        ""
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Температура в градусах Цельсіях =  -11.0\n",
+            "\n",
+            "Тепер давай спробуємо навпаки\n",
+            "Температура в Фаренгейтах =  41.0\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "F=float(input(\"Введіть температуру в Фаренгейтах: \"))\n",
+        "C=float(round((F-32)*0.5556))\n",
+        "print(\"Температура в градусах Цельсіях = \", C)\n",
+        "\n",
+        "print(\"\\nТепер давай спробуємо навпаки\")\n",
+        "\n",
+        "C=float(input(\"\\nВведіть температуру в градусах Цельсіях: \"))\n",
+        "F=float(round(C*1.8+32))\n",
+        "print(\"Температура в Фаренгейтах = \", F)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -129,5 +147,30 @@
         "Ще більше простих вправ з Python - [тут](https://www.w3resource.com/python-exercises/python-basic-exercises.php)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "2. Ще трохи математики",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
